[gd_scene load_steps=5 format=3 uid="uid://qp38bshnyq3h"]

[ext_resource type="Script" uid="uid://c13naitq2e06n" path="res://scripts/ui/skill_choose.gd" id="1_4h7er"]
[ext_resource type="Texture2D" uid="uid://davk3as2tq5ut" path="res://art/textures/GUI_Assets.png" id="2_nkx81"]
[ext_resource type="Theme" uid="uid://l5nt8aeex4yj" path="res://scenes/userinterface/button_theme.tres" id="3_nkx81"]
[ext_resource type="Texture2D" uid="uid://b33jkq5s683ck" path="res://art/textures/Orb.png" id="4_uc41p"]

[node name="SkillChoose" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -273.0
offset_top = 104.0
offset_right = -273.0
offset_bottom = 104.0
grow_horizontal = 0
script = ExtResource("1_4h7er")

[node name="Background2" type="NinePatchRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = -1
offset_left = -277.36798
offset_top = -104.0
offset_right = 277.63202
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nkx81")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.632
anchor_top = 0.38000003
anchor_right = 0.632
anchor_bottom = 0.38000003
offset_left = -262.06403
offset_top = -95.24002
offset_right = 262.93597
offset_bottom = 94.75998

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Select Skill"
horizontal_alignment = 1

[node name="NameSpeciality" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Name, Runner"
horizontal_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(525, 80)
layout_mode = 2
theme = ExtResource("3_nkx81")

[node name="Icon1" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 9.0
offset_top = 21.0
offset_right = 53.0
offset_bottom = 61.0
texture = ExtResource("4_uc41p")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1"]
layout_mode = 0
offset_left = 58.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 54.0

[node name="SkillName1" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title"

[node name="LabelSkill1" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
text = "Description"
autowrap_mode = 3

[node name="VBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Skill2" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(525, 80)
layout_mode = 2
theme = ExtResource("3_nkx81")
icon_alignment = 1
expand_icon = true

[node name="Icon2" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Skill2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 9.0
offset_top = 18.0
offset_right = 53.0
offset_bottom = 58.0
texture = ExtResource("4_uc41p")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Skill2"]
layout_mode = 0
offset_left = 57.0
offset_top = 13.0
offset_right = 239.0
offset_bottom = 53.0

[node name="SkillName2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Skill2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title"

[node name="LabelSkill2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Skill2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
text = "Description"
autowrap_mode = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_skill_1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Skill2" to="." method="_on_skill_2_pressed"]
